syntax = "proto3";

package greet;

option go_package = "grpc-go-course/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetRespone {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetRespone);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetRespone);
    rpc LongGreet (stream GreetRequest) returns (GreetRespone);
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetRespone);
}